--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 server:
   error:
     include-stacktrace: never
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/movies?useSSL=false&createDatabaseIfNotExists=true
+    username: root
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
