--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+#    show-sql: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
+        type: trace
